<?xml version="1.0" encoding="utf-8"?><!--Creating Group For Menu Items-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_book"
            android:icon="@drawable/ic_book_icon"
            android:title="@string/book_appointment" />
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_products_icon"
            android:title="@string/products" />

        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/my_cart" />

        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/ic_baseline_design_services_24"
            android:title="@string/services" />
    </group>

    <item

        android:title="Share &amp; Review">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_share_icon"
                    android:title="Share" />
                <item
                    android:id="@+id/nav_rate"
                    android:icon="@drawable/ic_rate_icon"
                    android:title="Testimonials" />
            </group>
        </menu>
    </item>
    <item android:title="Profile">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_profile_icon"
                    android:title="@string/profile" />
            </group>
        </menu>
    </item>
    <item
        android:title="Settings &amp; Support">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings_icon"
                    android:title="@string/settings" />
                <item
                    android:id="@+id/nav_help"
                    android:icon="@drawable/ic_help_icon"
                    android:title="Help Centre" />
            </group>
        </menu>
    </item>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_contact_icon"
            android:title="@string/contact" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout_icon"
            android:title="@string/logout" />
    </group>

</menu>