<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home"/>
    </group>

    <item android:title="Manage Products">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_manage_products"
                    android:icon="@drawable/ic_products_icon"
                    android:title="@string/manage_products" />
                <item
                    android:id="@+id/nav_add_products"
                    android:icon="@drawable/ic_bookings_icon"
                    android:title="@string/add_product" />
            </group>
        </menu>
    </item>

    <item android:title="Manage Bookings">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_admin_notifications"
                    android:icon="@drawable/ic_notifications_icon"
                    android:title="@string/admin_notifications" />
                <item
                    android:id="@+id/nav_manage_bookings"
                    android:icon="@drawable/ic_bookings_icon"
                    android:title="@string/view_appointments" />
            </group>
        </menu>
    </item>


    <item android:title="Manage Services">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_admin_manage_services"
                    android:icon="@drawable/ic_notifications_icon"
                    android:title="@string/manage_services" />
                <item
                    android:id="@+id/nav_add_service"
                    android:icon="@drawable/ic_bookings_icon"
                    android:title="@string/add_service" />
            </group>
        </menu>
    </item>


    <item android:title="Settings">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_admin_settings"
                    android:icon="@drawable/ic_notifications_icon"
                    android:title="@string/settings" />
                <item
                    android:id="@+id/nav_admin_help_center"
                    android:icon="@drawable/ic_help_icon"
                    android:title="@string/view_appointments" />
            </group>
        </menu>
    </item>


</menu>