<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="160dp"
    android:layout_height="300dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#f5f5f5"
    app:cardCornerRadius="2dp"
    app:cardElevation="8dp"
    android:layout_margin="10dp">

    <!--Hook To Add All Card View Elements-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/service_image"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:src="@drawable/hair_care"
            android:elevation="4dp"
            android:scaleType="centerCrop"/>
        <TextView
            android:id="@+id/service_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hair_care"
            android:textSize="16sp"
            android:fontFamily="@font/kadwa"
            android:textColor="@color/dark_blue"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/service_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hair_care_desc"
            android:textSize="11sp"
            android:fontFamily="@font/kadwa"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/service_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hair_care_desc2"
            android:textSize="11sp"
            android:fontFamily="@font/kadwa"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"/>

    </LinearLayout>


</androidx.cardview.widget.CardView>