<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_smoke"
    tools:context=".Users.UserDashboard">




    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white_smoke"
        android:theme="@style/navigation_theme"
        app:headerLayout="@layout/nav_menu_header"
        app:menu="@menu/main_menu" />


    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_smoke"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_blue"
            android:padding="10dp">

            <ImageView
                android:id="@+id/nav_menu_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:hapticFeedbackEnabled="true"
                android:src="@drawable/ic_baseline_menu_24" />

            <ImageView
                android:id="@+id/notification_icon"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="5dp"
                android:src="@drawable/notifications"

                />
        </RelativeLayout>


        <!--Creating Scroll View-->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">



                    <TextView
                        android:id="@+id/app_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/kadwa"
                        android:text="@string/app_name"
                        android:textColor="@color/dark_blue"
                        android:textSize="34sp"
                        android:textStyle="bold" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_below="@id/app_name"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="40dp"
                        android:layout_marginBottom="20dp"
                        android:background="@color/white"
                        android:elevation="8dp">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="20dp"
                            android:fontFamily="@font/kadwa"
                            android:text="@string/search_here"
                            android:textColor="@color/black" />

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="15dp"
                            android:src="@drawable/search" />


                    </RelativeLayout>


                </RelativeLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="20dp">


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">


                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_margin="10dp"
                            android:background="@color/white"
                            android:elevation="8dp">

                            <ImageView
                                android:id="@+id/book_appointment"
                                android:layout_width="45dp"
                                android:layout_height="45dp"
                                android:layout_centerInParent="true"
                                android:src="@drawable/book_appointment" />


                        </RelativeLayout>


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/kadwa"
                            android:text="@string/appointments"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_margin="10dp"
                            android:background="@color/white"
                            android:elevation="8dp">

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="55dp"
                                android:layout_centerInParent="true"
                                android:src="@drawable/testimonials" />


                        </RelativeLayout>


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/kadwa"
                            android:text="@string/testimonials"
                            android:textAlignment="center"

                            android:textColor="@color/black"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_margin="10dp"
                            android:background="@color/white"
                            android:elevation="8dp">

                            <ImageView
                                android:layout_width="45dp"
                                android:layout_height="45dp"
                                android:layout_centerInParent="true"
                                android:src="@drawable/cart" />


                        </RelativeLayout>


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/kadwa"
                            android:text="@string/cart"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="12sp" />

                    </LinearLayout>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/white">


                    <LinearLayout
                        android:id="@+id/features"
                        android:layout_width="170dp"
                        android:layout_height="300dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/dark_gray"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="50dp"
                            android:fontFamily="@font/kadwa"
                            android:text="@string/our_services"
                            android:textAllCaps="true"
                            android:textColor="@color/white_smoke"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:fontFamily="@font/kadwa"
                            android:text="@string/service_desc"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:textStyle="bold" />


                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/service_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/features"
                        android:background="@color/white" />


                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/kadwa"
                            android:text="@string/products"
                            android:textColor="@color/dark_blue"
                            android:textSize="22sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/view_all_products"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:fontFamily="@font/kadwa"
                            android:text="@string/view_all"
                            android:textColor="@color/dark_blue"
                            android:textSize="14sp" />

                    </RelativeLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/products_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/kadwa"
                            android:text="@string/our_work"
                            android:textColor="@color/dark_blue"
                            android:textSize="22sp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/some_work_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>